--- a/code_build.ipynb
+++ b/code_build.ipynb
@@ -56,6 +56,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "e02ed968",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make changes to files\n",
+    "git status            # See what changed\n",
+    "git add .             # Stage everything\n",
+    "git commit -m \"Update diet planner features\"\n",
+    "git push origin main  # Push to GitHub"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "5267556a",
    "metadata": {},
@@ -66,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "b71ad53a",
    "metadata": {},
    "outputs": [],
@@ -78,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e7b0f769",
    "metadata": {},
    "outputs": [],
@@ -89,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c1f26957",
    "metadata": {},
    "outputs": [],
@@ -99,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "98d8965c",
    "metadata": {},
    "outputs": [
@@ -132,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "a3ced006",
    "metadata": {},
    "outputs": [],
@@ -142,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "3a5c8903",
    "metadata": {},
    "outputs": [],
@@ -161,17 +175,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "c1703993",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='That’s music to a coder’s ears! 🎶💻  \\nWhether you’re whispering sweet nothings to Python, flirting with JavaScript, or serenading C++, the world’s a better place when you’re in love with those curly braces and endless loops.  \\n\\nGot a favorite language, a quirky bug‑story, or a “I‑just‑wrote‑the‑perfect‑function” moment you want to brag about? I’m all ears (and semicolons). 😎✨', additional_kwargs={'reasoning_content': 'The user says \"I love programming.\" We should respond in a fun and witty manner, acknowledging their love for programming. Possibly ask about languages, share a joke, etc. Keep tone fun and witty.'}, response_metadata={'token_usage': {'completion_tokens': 154, 'prompt_tokens': 91, 'total_tokens': 245, 'completion_time': 0.330877412, 'completion_tokens_details': {'reasoning_tokens': 42}, 'prompt_time': 0.003551379, 'prompt_tokens_details': None, 'queue_time': 0.166824317, 'total_time': 0.334428791}, 'model_name': 'openai/gpt-oss-120b', 'system_fingerprint': 'fp_626f3fc5e0', 'service_tier': 'on_demand', 'finish_reason': 'stop', 'logprobs': None, 'model_provider': 'groq'}, id='lc_run--019c008f-e197-7451-9bc9-01b3fec968fe-0', tool_calls=[], invalid_tool_calls=[], usage_metadata={'input_tokens': 91, 'output_tokens': 154, 'total_tokens': 245, 'output_token_details': {'reasoning': 42}})"
+       "AIMessage(content='That’s music to a data‑scientist’s ears! 🎶🤖  \\nIf ML were a superhero, it’d be “Captain Gradient Descent” – always finding the best path, never taking the easy (or flat) route.  \\n\\nWhat’s your favorite ML trick? Turning cats into memes with GANs? Teaching a model to predict the perfect pizza topping combo? Let’s geek out together! 🚀✨', additional_kwargs={'reasoning_content': 'The user says \"I love Machine Learning.\" We should respond in a fun and witty manner, acknowledging their love for ML, maybe ask about their interests, mention something humorous. Follow developer instruction: fun and witty. No disallowed content.'}, response_metadata={'token_usage': {'completion_tokens': 143, 'prompt_tokens': 92, 'total_tokens': 235, 'completion_time': 0.299748608, 'completion_tokens_details': {'reasoning_tokens': 49}, 'prompt_time': 0.003624132, 'prompt_tokens_details': None, 'queue_time': 0.052496218, 'total_time': 0.30337274}, 'model_name': 'openai/gpt-oss-120b', 'system_fingerprint': 'fp_8a618bed98', 'service_tier': 'on_demand', 'finish_reason': 'stop', 'logprobs': None, 'model_provider': 'groq'}, id='lc_run--019c05cf-d668-7383-b744-b93cf34e060f-0', tool_calls=[], invalid_tool_calls=[], usage_metadata={'input_tokens': 92, 'output_tokens': 143, 'total_tokens': 235, 'output_token_details': {'reasoning': 49}})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +196,7 @@
     "        \"system\",\n",
     "        \"You are a helpful assistant. You use fun and witty responses.\",\n",
     "    ),\n",
-    "    (\"human\", \"I love programming.\"),\n",
+    "    (\"human\", \"I love Machine Learning.\"),\n",
     "]\n",
     "ai_msg = llm.invoke(messages)\n",
     "ai_msg"
@@ -190,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "1a0e4b75",
    "metadata": {},
    "outputs": [
@@ -198,10 +212,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "That’s music to a coder’s ears! 🎶💻  \n",
-      "Whether you’re whispering sweet nothings to Python, flirting with JavaScript, or serenading C++, the world’s a better place when you’re in love with those curly braces and endless loops.  \n",
+      "That’s music to a data‑scientist’s ears! 🎶🤖  \n",
+      "If ML were a superhero, it’d be “Captain Gradient Descent” – always finding the best path, never taking the easy (or flat) route.  \n",
       "\n",
-      "Got a favorite language, a quirky bug‑story, or a “I‑just‑wrote‑the‑perfect‑function” moment you want to brag about? I’m all ears (and semicolons). 😎✨\n"
+      "What’s your favorite ML trick? Turning cats into memes with GANs? Teaching a model to predict the perfect pizza topping combo? Let’s geek out together! 🚀✨\n"
      ]
     }
    ],
@@ -238,17 +252,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "1d9ea377",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"In February 1981, Obama made his first public speech, calling for Occidental to participate in the disinvestment from South Africa in response to ... ... searching our database we found 1 possible solution for the: ... The solution we have for President Obama ' s first name has a total of 6 letters. According to the BBC , Odinga claims Obama as a first cousin.) We should eschew guilt by association, but the echoes resound. For many, the name was exotic, signifying a kind of transformation of the customary, the core of Obama ’ s schtick which brought us to the brink of ... Oh did we mention that Dorne Ayers Wif got Michille Obamas Wife her first Job at a Law Firm in Chicago and the whole Bunch lives in the same ...\""
+       "\"Machine learning & AI news . Date. Machine learning lends a helping 'hand' to prosthetics. Holding an egg requires a gentle touch. here's a list of various AI/ML news sources: TechCrunch AI/ML Section - Offers news , analysis, and insights into the latest developments in AI and machine learning . MIT Technology Review - Covers advancements in AI, machine learning , and emerging technologies. What is machine learning ? Machine learning is the subset of artificial intelligence (AI) focused on algorithms that can “ learn ” the patterns of training data and, subsequently, make accurate inferences about new data. If a machine can coordinate multiple tasks, fewer humans are needed to manage them. AI turns out to be remarkably good at exactly the kind of work that employed millions of people: following procedures, coordinating handoffs between departments, and navigating bureaucratic complexity. You are the spark. Get the latest AI news , courses, events, and insights from Andrew Ng and other AI leaders.Build a foundation of machine learning and AI skills, and understand how to apply them in the real world.\""
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +272,7 @@
     "\n",
     "search = DuckDuckGoSearchRun()\n",
     "\n",
-    "search.invoke(\"Obama's first name?\")"
+    "search.invoke(\"what is the latest news about Machine Learning\")"
    ]
   },
   {
@@ -283,17 +297,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "10f86ea2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"snippet: 1 week ago - Barack Hussein Obama II (born August 4, 1961) is an American politician who served as the 44th president of the United States from 2009 to 2017. A member of the Democratic Party, he was the first African American president. Obama previously served as a U.S. senator representing Illinois from ..., title: Barack Obama - Wikipedia, link: https://en.wikipedia.org/wiki/Barack_Obama, snippet: 16 hours ago - Barack Obama's tenure as the 44th president of the United States began with his first inauguration on January 20, 2009, and ended on January 20, 2017. Obama, a Democrat from Illinois, took office after defeating the Republican nominee John McCain in the 2008 presidential election., title: Presidency of Barack Obama - Wikipedia, link: https://en.wikipedia.org/wiki/Presidency_of_Barack_Obama, snippet: 3 days ago - Michelle LaVaughn Robinson Obama (née Robinson; born January 17, 1964) is an American attorney and author who served as First Lady of the United States from 2009 to 2017 as the wife of Barack Obama, the 44th president of the United States., title: Michelle Obama - Wikipedia, link: https://en.wikipedia.org/wiki/Michelle_Obama, snippet: The allegations of Barack Obama spying on Donald Trump encompass claims that the Obama administration engaged in or oversaw unauthorized..., title: Allegations of Barack Obama spying on Donald Trump, link: https://grokipedia.com/page/Allegations_of_Barack_Obama_spying_on_Donald_Trump\""
+       "'snippet: 6 days ago · New “biomimetic” model of brain circuits and function at multiple scales produced naturalistic dynamics and learning , and even identified curious behavior by some neurons. New research detects hidden evidence of mistaken correlations — and provides a method to improve accuracy., title: Machine learning | MIT News | Massachusetts Institute of ..., link: https://news.mit.edu/topic/machine-learning, snippet: Read full articles, watch videos, browse thousands of titles and more on the \" Machine learning \" topic with Google News., title: Google News - Machine learning - Latest, link: https://news.google.com/topics/CAAqIggKIhxDQkFTRHdvSkwyMHZNREZvZVdoZkVnSmxiaWdBUAE, snippet: Read the latest on artificial intelligence and machine learning tech, the companies that are building them, and the ethical issues AI raises today., title: AI News & Artificial Intelligence | TechCrunch, link: https://techcrunch.com/category/artificial-intelligence/, snippet: 4 days ago · MIT researchers have identified significant examples of machine - learning model failure when those models are applied to data other than what they were trained on, raising questions about the need to test whenever a model ..., title: News on Artificial Intelligence and Machine Learning, link: https://techxplore.com/machine-learning-ai-news/'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +317,7 @@
     "\n",
     "search = DuckDuckGoSearchResults()\n",
     "\n",
-    "search.invoke(\"Obama\")"
+    "search.invoke(\"what is the latest news about Machine Learning\")"
    ]
   },
   {
