--- a/code_build.ipynb
+++ b/code_build.ipynb
@@ -277,6 +277,88 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "id": "647b13b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = search.invoke(\"what is todays date?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "60cc0ca2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1 month ago - Today’s date in numbers yyyy/mm/dd is 2026/01/19 May 7, 2025 - Sun, 18 January 2026 Do you ever find yourself confused about the date? With so numerous different ways of writing dates, it\\'s easy to get mixed up. In this composition, we\\'ll take a close look at some of the most common date formats and answer the question,\" What is Today\\'s date?\" What is ... August 4, 2025 - The simplest way to see the date today and stay on top of your schedule. With the varying conventions for writing the date, miscommunication can easily occur. A date written as 03/04/2024 could refer to two completely different dates: ... This ambiguity can lead to missed deadlines, incorrect records, and general disorder. The best practice, especially in international communications, is to avoid numbers alone and write out the month’s name. 3 weeks ago - As of now, it is November 12th, 2025 . Now let’s break that down into numbers—because dates can be a bit tricky depending on where you are in the world. In the United States, we typically write it as MM-DD-YYYY: 11-12-2025 or 11/12/2025. 1 week ago - Display Today\\'s date of the Hijri and the Gregorian day in the Hijri and Gregorian calendar site. Today\\'s date is updated automatically every day.'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search = DuckDuckGoSearchRun()\n",
+    "search.invoke(\"what is todays date?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "87cadd7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raw Result: snippet: Get to know what date it is today based on your current location. What Is the Date Today In Numbers? The current date depends on the region you are currently residing in. The most common date formats include, title: What Is Today ’s Date ?, link: https://thetimecalculator.org/today-date, snippet: What is today 's date ? Today ’s date in numbers and slashes. When writing the date by numbers only, you can separate them by using a hyphen (-), a slash (/), or a dot (.), title: Today ’s date in numbers » Today - date .com, link: https://today-date.com/, snippet: what is today 's date ? calculate yards of concrete. how long until 3:30?For instance, if the current date is November 1st, then the result might look like this: Graphic showing the formula for Google Sheets or Microsoft Excel to calculate the current date ., title: What Is Today 's Date ? - Inch Calculator, link: https://www.inchcalculator.com/what-is-todays-date/, snippet: Today 's Date is your one-stop destination to master time tracking. We provide accurate, real-time updates on the current date and time and many other useful information., title: What is the date today | Today 's Date, link: https://www.datetoday.info/\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Raw Result:\",result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb064944",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc94d1a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b0a9c87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa4ba523",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "b7d15858",
    "metadata": {},
@@ -318,6 +400,99 @@
     "search = DuckDuckGoSearchResults()\n",
     "\n",
     "search.invoke(\"what is the latest news about Machine Learning\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76613437",
+   "metadata": {},
+   "source": [
+    "## Example 6: Integrating Search as a Tool for Your Agent\n",
+    "\n",
+    "Add web search capability to your diet planner agent so it can fetch real-time nutritional information.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d83f56a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.tools import tool\n",
+    "from langchain_community.tools import DuckDuckGoSearchRun\n",
+    "from langchain.agents import create_react_agent, AgentExecutor\n",
+    "from langchain import hub\n",
+    "from langchain_groq import ChatGroq\n",
+    "\n",
+    "# Create a search tool that your agent can use\n",
+    "search_runner = DuckDuckGoSearchRun()\n",
+    "\n",
+    "@tool\n",
+    "def search_nutrition_info(query: str) -> str:\n",
+    "    \"\"\"Search for nutritional information about food items or diet topics.\"\"\"\n",
+    "    try:\n",
+    "        results = search_runner.invoke(query)\n",
+    "        # Clean up results\n",
+    "        lines = results.split('\\n')\n",
+    "        cleaned = [line.strip() for line in lines if line.strip() and len(line.strip()) > 10]\n",
+    "        return '\\n'.join(cleaned[:3])  # Return top 3 results\n",
+    "    except Exception as e:\n",
+    "        return f\"Search failed: {str(e)}\"\n",
+    "\n",
+    "# Define your existing tools\n",
+    "@tool\n",
+    "def calculate_calories(meal: str, portion_size: str) -> str:\n",
+    "    \"\"\"Calculate calories for a given meal and portion size.\"\"\"\n",
+    "    meal_calories = {\n",
+    "        \"chicken breast\": 165,\n",
+    "        \"rice\": 206,\n",
+    "        \"broccoli\": 34,\n",
+    "        \"salmon\": 280,\n",
+    "        \"apple\": 95\n",
+    "    }\n",
+    "    calories = meal_calories.get(meal.lower(), 0)\n",
+    "    return f\"{meal} ({portion_size}) contains approximately {calories} calories per 100g\"\n",
+    "\n",
+    "@tool\n",
+    "def get_nutritional_info(food_item: str) -> str:\n",
+    "    \"\"\"Get nutritional information for a food item including protein, carbs, and fat.\"\"\"\n",
+    "    nutrition_db = {\n",
+    "        \"chicken breast\": \"Protein: 31g, Carbs: 0g, Fat: 3.6g (per 100g)\",\n",
+    "        \"rice\": \"Protein: 2.7g, Carbs: 28g, Fat: 0.3g (per 100g)\",\n",
+    "        \"broccoli\": \"Protein: 2.8g, Carbs: 7g, Fat: 0.4g (per 100g)\",\n",
+    "        \"salmon\": \"Protein: 25g, Carbs: 0g, Fat: 13g (per 100g)\"\n",
+    "    }\n",
+    "    return nutrition_db.get(food_item.lower(), \"Food item not found in database\")\n",
+    "\n",
+    "# Create agent with search included\n",
+    "llm = ChatGroq(model=\"mixtral-8x7b-32768\", temperature=0)\n",
+    "\n",
+    "# Include search tool in your toolset\n",
+    "tools_with_search = [calculate_calories, get_nutritional_info, search_nutrition_info]\n",
+    "\n",
+    "prompt = hub.pull(\"hwchase17/react\")\n",
+    "agent = create_react_agent(llm, tools_with_search, prompt)\n",
+    "agent_executor = AgentExecutor(\n",
+    "    agent=agent, \n",
+    "    tools=tools_with_search, \n",
+    "    verbose=True,\n",
+    "    max_iterations=10\n",
+    ")\n",
+    "\n",
+    "# Test: Agent will decide to use search for questions it doesn't have data for\n",
+    "print(\"=== Agent with Search Tool ===\\n\")\n",
+    "result = agent_executor.invoke({\n",
+    "    \"input\": \"What is the nutritional value of quinoa and how does it compare to rice?\"\n",
+    "})\n",
+    "print(\"\\nFinal Response:\", result[\"output\"])\n",
+    "\n",
+    "# Test 2: Agent uses local data when available\n",
+    "print(\"\\n=== Agent Uses Local Data ===\\n\")\n",
+    "result2 = agent_executor.invoke({\n",
+    "    \"input\": \"Tell me about chicken breast nutrition and then search for new diet trends\"\n",
+    "})\n",
+    "print(\"\\nFinal Response:\", result2[\"output\"])"
    ]
   },
   {
